# bongard-rwr-plus

./: .dockerignore  LICENSE  README.md  pyproject.toml
resources/chat_templates/: llava_v1.6_vicuna.jinja
scripts/: DescribeImages.ipynb  GenerateMorePrompts.ipynb  combine_squares_into_matrices.py  convert_to_greyscale.py  generate_images_locally.py  generate_subproblems.py  run_similarity_classifier_d1s.py  run_similarity_classifier_d2s.py  run_similarity_classifier_i1s.py  run_similarity_classifier_i2s.py  split_into_matrices_stochastic.py
src/: image.py
src/dataset/: model.py  simple_model.py
src/dataset/rendering/: mixed_sizes.py  squares.py
src/evaluation/: longest_common_subsequence.py
src/experiment/: base.py  run_vllm.py
src/messenger/: content.py  formatter.py  llm_messenger.py  vllm_messenger.py
src/model/: similarity_classifier.py
src/strategy/d1s/: method.py  model.py  prompt.py
src/strategy/d2s/: method.py  model.py  prompt.py
src/strategy/d2s_bin/: method.py  model.py  prompt.py
src/strategy/i1d/: method.py  model.py  prompt.py
src/strategy/i1s/: method.py  model.py  prompt.py
src/strategy/i2s/: method.py  model.py  prompt.py
src/strategy/i2s_bin/: method.py  model.py  prompt.py
src/strategy/selection/: model.py  prompt.py  selection.py
tests/evaluation/: test_longest_common_subsequence.py
tests/strategy/d1s/: test_model.py  test_prompt.py
tests/strategy/d2s/: test_model.py  test_prompt.py
tests/strategy/d2s_bin/: test_model.py  test_prompt.py
tests/strategy/i1d/: test_model.py  test_prompt.py
(+28 files in other folders)
